--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,6 +70,7 @@ a:visited {
     border-radius: 70px;
     font-size: 16px;
     font-weight: medium;
+    cursor: pointer;
 }
 
 /* Main Section */
@@ -85,9 +86,10 @@ main {
     height: 100%;
     margin: auto;
     padding: 0 20px;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
+    gap: 40px;
 }
 
 .hero-text h1 {
@@ -127,6 +129,7 @@ main {
     padding: 24px 20px;
     border: none;
     border-radius: 70px;
+    cursor: pointer;
 }
 
 /* Partners Section */
@@ -136,13 +139,17 @@ main {
 }
 
 .partners-container {
-    display: flex;
+    max-width: 1400px;
+    width: 100%;
     height: 552px;
+    margin: 0 auto;
+    padding: 0 20px;
+    display: flex;
     flex-direction: column;
 }
 
 .partners h2 {
-    margin-top: 5%;
+    margin-top: 6%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -152,9 +159,9 @@ main {
 }
 
 .partners-image ul {
-    margin-top: 5%;
+    margin-top: 7%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     list-style-type: none;
 }
@@ -166,7 +173,6 @@ main {
 
 /* Commitments section*/
 .commitments {
-    max-width: 1400px;
     width: 100%;
     height: 536px;
     background-color: #FFFFFF;
@@ -176,25 +182,42 @@ main {
 }
 
 .commitments-container {
-    display: flex;
-    justify-content: space-evenly;
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
-
+    gap: 40px;
 }
 
 .commitments-info {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: start;
+    align-items: flex-start;
     text-align: start;
 }
 
 .commitments-info>div {
-    display: flex;
-    justify-content: start;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     width: 100%;
     margin-bottom: 20px;
+    gap: 20px;
+    justify-content: center;
+    text-align: center;
+}
+
+.revenue,
+.audience,
+.trust,
+.awards {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
 }
 
 .revenue h3,
@@ -204,6 +227,280 @@ main {
     font-size: 64px;
     font-weight: 700;
 }
+
+.revenue {
+    margin-right: 50px;
+}
+
+.revenue p,
+.audience p,
+.trust p,
+.awards p {
+    opacity: 60%;
+    font-size: 16px;
+}
+
+.commitments-desc {
+    display: flex;
+    flex-direction: column;
+    align-self: start;
+}
+
+.learn-more {
+    margin-top: 50px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+
+.learn-more a {
+    color: var(--secondary);
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+}
+
+.learn-more a svg {
+    margin-left: 5px;
+    vertical-align: middle;
+}
+
+.commitments-text {
+    width: 560px;
+}
+
+.commitments-text span {
+    font-size: 64px;
+    word-spacing: -1px;
+}
+
+.commitments-text p {
+    font-size: 18px;
+    line-height: 32px;
+    font-size: 18px;
+    opacity: 60%;
+}
+
+
+/** How it works Section**/
+.howitworks {
+    width: 100%;
+    height: 804px;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.howitworks-container {
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: start;
+    gap: 40px;
+}
+
+.howitworks-desc {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    text-align: start;
+}
+
+.howitworks-desc img {
+    margin-top: 82px;
+}
+
+.howitworks-text span {
+    font-size: 64px;
+    font-weight: 500;
+}
+
+.howitworks-text p {
+    font-size: 18px;
+    line-height: 36px;
+    opacity: 60%;
+    width: 490px;
+    margin-top: 15px;
+}
+.discovery,
+.strategy,
+.execution,
+.measurment {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 32px;
+}
+
+.strategy,
+.execution,
+.measurment {
+    margin-top: 42px;
+}
+
+.howitworks-info span{
+    font-size: 32px;
+    font-weight: 500;
+}
+
+.howitworks-info p{
+    font-size: 16px;
+    font-weight: 500;
+    margin-top: 12px;
+    line-height: 32px;
+    opacity: 60%;
+    width: 452px;
+}
+
+
+/** Our Work Section**/
+
+.ourwork{
+    width: 100%;
+    height: 920px;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ourwork-container {
+    max-width: 1400px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0 20px;
+    gap: 40px;
+}
+.ourwork-desc span{
+    font-size: 64px;
+    font-weight: 500;
+}
+.ourwork-desc p{
+    font-size: 16px;
+    font-weight: 500;
+    margin-top: 12px;
+    line-height: 32px;
+    opacity: 60%;
+}
+.ourwork-img{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.ourwork-img p{
+    font-size: 28px;
+    font-weight: 500;
+    margin-top: 12px;
+}
+
+.ourwork-container button{
+    background-color: var(--secondary);
+    color: #FFFFFF;
+    border: none;
+    border-radius: 64px;
+    padding: 16px 48px;
+    font-size: 24px;
+    font-weight: medium;
+    cursor: pointer;
+}
+
+/* CTA Banner Section*/
+
+.cta-banner {
+    width: 100%;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0;
+}
+
+.cta-banner-container {
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.cta-banner-desc {
+    position: relative;
+    width: 1200px;
+    height: 371px;
+    margin: 0 auto;
+}
+
+.cta-banner-desc img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.cta-banner-desc > div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: start;
+    padding: 0 100px;
+    gap: 40px;
+}
+
+.cta-banner-desc span{
+    width: 393px;
+    font-size: 64px;
+    font-weight: 500;
+    line-height: 87px;
+}
+
+.cta-banner-confirm p{
+    width: 470px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 40px;
+}
+
+.cta-banner-confirm button{
+    margin-top: 32px;
+    color: black;
+    font-weight: medium;
+    font-size: 24px;
+    background-color: #FFFFFF;
+    padding: 16px 48px;
+    border: none;
+    border-radius: 70px;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
