--- a/src/css/style.css
+++ b/src/css/style.css
@@ -328,6 +328,7 @@ main {
     width: 490px;
     margin-top: 15px;
 }
+
 .discovery,
 .strategy,
 .execution,
@@ -344,12 +345,12 @@ main {
     margin-top: 42px;
 }
 
-.howitworks-info span{
+.howitworks-info span {
     font-size: 32px;
     font-weight: 500;
 }
 
-.howitworks-info p{
+.howitworks-info p {
     font-size: 16px;
     font-weight: 500;
     margin-top: 12px;
@@ -361,7 +362,7 @@ main {
 
 /** Our Work Section**/
 
-.ourwork{
+.ourwork {
     width: 100%;
     height: 920px;
     background-color: #FFFFFF;
@@ -377,35 +378,37 @@ main {
     flex-direction: column;
     text-align: center;
     margin: 0 auto;
-    padding: 0 20px;
     gap: 40px;
 }
-.ourwork-desc span{
+
+.ourwork-desc span {
     font-size: 64px;
     font-weight: 500;
 }
-.ourwork-desc p{
+
+.ourwork-desc p {
     font-size: 16px;
     font-weight: 500;
     margin-top: 12px;
     line-height: 32px;
     opacity: 60%;
 }
-.ourwork-img{
+
+.ourwork-img {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 20px;
+
 }
 
-.ourwork-img p{
+.ourwork-img p {
     font-size: 28px;
     font-weight: 500;
     margin-top: 12px;
 }
 
-.ourwork-container button{
+.ourwork-container button {
     background-color: var(--secondary);
     color: #FFFFFF;
     border: none;
@@ -424,7 +427,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px 0;
+    height: 573px;
 }
 
 .cta-banner-container {
@@ -432,22 +435,24 @@ main {
     width: 100%;
     margin: 0 auto;
     padding: 0 20px;
+
 }
 
 .cta-banner-desc {
     position: relative;
-    width: 1200px;
+    width: 1350px;
     height: 371px;
     margin: 0 auto;
+
 }
 
 .cta-banner-desc img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
 }
 
-.cta-banner-desc > div {
+.cta-banner-desc>div {
     position: absolute;
     top: 0;
     left: 0;
@@ -463,21 +468,21 @@ main {
     gap: 40px;
 }
 
-.cta-banner-desc span{
+.cta-banner-desc span {
     width: 393px;
     font-size: 64px;
     font-weight: 500;
     line-height: 87px;
 }
 
-.cta-banner-confirm p{
+.cta-banner-confirm p {
     width: 470px;
     font-size: 20px;
     font-weight: 500;
     line-height: 40px;
 }
 
-.cta-banner-confirm button{
+.cta-banner-confirm button {
     margin-top: 32px;
     color: black;
     font-weight: medium;
@@ -489,21 +494,468 @@ main {
     cursor: pointer;
 }
 
+/* Our Team Section*/
+
+.ourteam {
+    width: 100%;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    padding: 50px 0;
+    height: 636px;
+}
+
+.ourteam-container {
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: start;
+    align-items: start;
+    gap: 40px;
+}
+
+.ourteam-container>div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    padding: 0 100px;
+    gap: 100px;
+}
+
+.ourteam-container span {
+    font-size: 64px;
+    font-weight: 500;
+    text-align: start;
+}
+
+.ourteam-container p {
+    text-align: start;
+    font-size: 16px;
+    line-height: 32px;
+    opacity: 60%;
+    margin-top: 27px;
+    width: 460px;
+}
+
+.ourteam-container button {
+    margin-top: 163px;
+    background-color: var(--secondary);
+    color: #FFFFFF;
+    padding: 16px 48px;
+    border: none;
+    border-radius: 70px;
+    font-size: 24px;
+    font-weight: medium;
+    cursor: pointer;
+}
+
+/* Testimonial */
+
+.testimonial {
+    width: 100%;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 666px;
+}
+
+.testimonial-container {
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.testimonial-desc {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.testimonial-desc span {
+    font-size: 64px;
+    font-weight: 500;
+}
+
+.testimonial-container .right {
+    width: 85px;
+    height: 85px;
+    background-color: var(--secondary);
+    border-radius: 100%;
+    color: white;
+    border: none;
+    font-size: 30px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.testimonial-container .left {
+    width: 85px;
+    height: 85px;
+    background-color: #F8F9FF;
+    border-radius: 100%;
+    color: rgb(0, 0, 0, 0.3);
+    border: none;
+    font-size: 30px;
+    text-align: center;
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+.people {
+    margin-top: 68px;
+    width: 2000px;
+    display: flex;
+    gap: 20px;
+}
+
+.amelia {
+    width: 513px;
+    height: 312px;
+    padding: 40px;
+    background-color: var(--secondary);
+    border-radius: 30px;
+    color: white;
+}
+
+.jacob,
+.jacob2 {
+    width: 513px;
+    height: 312px;
+    padding: 40px;
+    background-color: #F8F9FF;
+    border-radius: 30px;
+    color: black;
+}
+
+.amelia-info,
+.jacob-info,
+.jacob2-info {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 10px;
+}
+
+.amelia-info span,
+.jacob-info span,
+.jacob2-info span {
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.amelia-info p,
+.jacob-info p,
+.jacob2-info p {
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 10px;
+}
 
 
+.amelia-desc p {
+    width: 400px;
+    font-size: 16px;
+    font-weight: 500;
+    opacity: 80%;
+
+    line-height: 32px;
+}
+
+.jacob-desc p,
+.jacob2-desc p {
+    width: 400px;
+    font-size: 16px;
+    font-weight: 500;
+    opacity: 80%;
+
+    line-height: 32px;
+
+}
+
+/* CTA Banner 2*/
+.cta-banner2 {
+    width: 100%;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
+}
+
+.cta-banner2-container {
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.cta-banner2-desc {
+    position: relative;
+    width: 1350px;
+    height: 455px;
+    margin: 0 auto;
+}
+
+.cta-banner2-desc img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
+
+.cta-banner2-desc>div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: start;
+    padding: 0 100px;
+    gap: 40px;
+}
+
+.cta-banner2-desc span {
+    width: 521px;
+    font-size: 56px;
+    font-weight: 500;
+    line-height: 63px;
+    text-transform: capitalize;
+}
+
+.cta-banner2-confirm {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+}
+
+.cta-banner2-confirm button {
+    margin-top: 100px;
+    color: white;
+    font-weight: medium;
+    font-size: 24px;
+    background-color: var(--secondary);
+    padding: 16px 48px;
+    border: none;
+    border-radius: 70px;
+    cursor: pointer;
+}
+
+.cta-banner2-info>div:last-child {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.cta-banner2-info img {
+    width: 352px;
+    height: 352px;
+    display: block;
+}
+
+/* Help Section*/
+.help {
+    width: 100%;
+    height: 582px;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.help-container {
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: start;
+    gap: 40px;
+}
+
+.help-container-faq {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 716px;
+    margin-right: 100px;
+}
+
+.help-container-faq>div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.help-container-faq>div:first-child {
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 32px;
+}
+
+.help-container-faq>div:last-child {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 32px;
+}
+
+.help-container-faq>div:not(:first-child):not(:last-child) {
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 32px;
+}
+
+.help-container-faq>div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 12px 0;
+}
 
 
+.help-container-faq span {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 36px;
+}
 
+.help-container-faq button {
+    background-color: var(--secondary);
+    width: 20px;
+    height: 20px;
+    color: #F8F9FF;
+    border-radius: 100%;
+    border: none;
+}
 
+.help-faq {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+}
 
+.help-faq span {
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 52px;
+}
 
+.help-faq p {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 36px;
+    opacity: 60%;
+    width: 431px;
+    margin-top: 16px;
+    margin-bottom: 32px;
+}
+.help-confirm input {
+    width: 312px;
+    height: 62px;
+    padding: 20px 18px;
+    border-radius: 37px;
+    font-size: 16px;
+    border: none;
+    box-shadow: 0 0 0 2px rgba(170, 170, 170, 0.8);
+    margin-right: 8px;
+    background-color: #FAFAFA;
+    margin-bottom: 42px;
+}
 
+.help-confirm button {
+    text-align: center;
+    width: 144px;
+    height: 62px;
+    color: white;
+    font-weight: medium;
+    font-size: 16px;
+    line-height: 20px;
+    background-color: var(--secondary);
+    padding: 24px 20px;
+    border: none;
+    border-radius: 70px;
+    cursor: pointer;
+}
 
+.more-faq {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
 
+.more-faq a {
+    color: var(--secondary);
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    text-decoration: underline;
+}
 
+.more-faq a svg {
+    margin-left: 5px;
+    vertical-align: middle;
+}
 
+/* Bottom */
+.bottom {
+    width: 100%;
+    height: 392px;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
+.bottom-container {
+    max-width: 1400px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: start;
+    gap: 40px;
+}
 
+/* Footer 
+
+footer{
+    width: 100%;
+    height: 119px;
+    background-color: #000000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+footer >div{
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 0 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: start;
+    gap: 40px;
+}
+*/
 
 
 
